crates/tracing/tests/ui/log/dotted_field_not_in_allowlist.rs
use miden_node_tracing::warn;

fn main() {
    warn!(foo.bar = %x, "msg");
}
